--- a/booksdetail.html
+++ b/booksdetail.html
@@ -75,7 +75,7 @@
         <h1>LibraryHub</h1>
         <nav>
             <ul>
-                <li><a href="zu.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About</a></li>
                 <li><a href="contactus.html">Contact</a></li>
                 <li><a href="booksdetail.html">Books</a></li>
